# xpbd

./: .gitignore  CMakeLists.txt
resources/Meshes/: Cloth.dae  cloth.stl  owl_light.stl
resources/Shaders/: ClothFS.glsl  ClothVS.glsl  RigidFS.glsl  SpringFS.glsl  SpringVS.glsl  Xaxis.frag  Yaxis.frag  Zaxis.frag  Zaxis.vert  anim_model.vert  floor.frag  owl.frag  owl.vert
resources/gpu_kernels/: HG_collisions.comp  external_collisions.comp  ground_collisions.comp  jacobi_add_correction.comp  next_predict_pos.comp  rest_length.comp  solve_coloring_constraints.comp  solve_jacobi_constraints.comp  update_velocities.comp
resources/meshes/AtoT/: AtoTposeBig.fbx  AtoTposeSmall.fbx
resources/meshes/Cloth/: ClothInit.dae  ClothSingle.dae  ClothSmall.dae
resources/meshes/Skirt/: skirt.fbx  skirt2.mtl
resources/meshes/Tanktop/: TanktopResize.mtl
resources/meshes/Tshirt/: Tshirt.dae  Tshirt.stl  TshirtOriented.dae  TshirtOriginale.dae
resources/meshes/Woman/: Woman.fbx  Woman2.fbx  WomanArms.fbx  WomanArms2.fbx  WomanCorsa.fbx  WomanDanza1.fbx  WomanDanza2.fbx  WomanDanza3.fbx  WomanDanza3_z.fbx  WomanPugno.fbx  WomanPugno2.fbx
src/: CMakeLists.txt  main.cpp
src/Headers/: Cloth.h  Display.h  Points.h  Program.h  Rigid.h  Spring.h  Vectors.h
src/Headers/glad/: glad.c
src/animation/: animation.h  animator.h  animdata.h  assimp_glm_helpers.h  bone.h  gerarchy.h  mesh.h  model_animation.h
src/bvh/: BVH.h  Box.h  DIspalyRigid.h  DisplayRigid.h  GeometryData.h  Program.h  Rigid.h  SphereBVH.h
src/cloth/: ClothModel.h  cloth.cpp  cloth.h  compute_shader.h
src/constraints/: b_constr.cpp  b_constr.h  constraint.cpp  constraint.h  s_constr.cpp  s_constr.h
src/display/: axis.h  camera.cpp  camera.h  display.cpp  display.h  floor.h  scene.cpp  scene.h  shader.h
src/hashgrid/: hashgrid.cpp  hashgrid.h
src/headers/: axis.h  camera.h  cloth.h  constraint.h  display.h  floor.h  hashgrid.h  myshader.h  node.h  square_cloth.h  state.h
src/node/: node.cpp  node.h
src/state/: state.cpp  state.h
src/triangle/: triangle.cpp  triangle.h
